Create a small notice for penalty shootout decider

--- a/app/assets/stylesheets/users/dashboard.scss
+++ b/app/assets/stylesheets/users/dashboard.scss
@@ -173,3 +173,10 @@
   margin-bottom: 20px;
   text-align: center;
 }
+
+.prediction-form__penalty-notice {
+  font-size: 12px;
+  font-weight: lighter;
+  margin: 5px 0;
+  text-align: center;
+}
