--- a/app/views/user/_prediction_form.html.slim
+++ b/app/views/user/_prediction_form.html.slim
@@ -6,8 +6,8 @@
   .form-group.d-flex.flex-column.col-md-8.align-items-center
     = f.hidden_field :match_id, value: match.id
     .d-flex.justify-content-between.prediction-form__score-inputs
-      = f.number_field :team_1_goals, class: "prediction-form__score-input #{knockout_score_class}", min: 0, max: 20
-      = f.number_field :team_2_goals, class: "prediction-form__score-input #{knockout_score_class}", min: 0, max: 20
+      = f.number_field :team_1_goals, value: (f.object.team_1_goals || 0), class: "prediction-form__score-input #{knockout_score_class}", min: 0, max: 20
+      = f.number_field :team_2_goals, value: (f.object.team_2_goals || 0), class: "prediction-form__score-input #{knockout_score_class}", min: 0, max: 20
     - if match.knock_out?
       .prediction-form__score-danger-alert.d-none role='alert'
         | Knockouts cannot be a tie!
