Fix a typo in variable name

--- a/app/views/user/_completed_matches_data.html.slim
+++ b/app/views/user/_completed_matches_data.html.slim
@@ -43,7 +43,7 @@
                       td #{prediction_text}
                       - icon_for_result = result[:match_result] ? right_prediction_icon : wrong_prediction_icon
                       td
-                        i.fa class='#{gicon_for_result}'
+                        i.fa class='#{icon_for_result}'
                       - icon_for_score = result[:score] ? right_prediction_icon : wrong_prediction_icon
                       td
                         i.fa class='#{icon_for_score}'
