Add a basic leaderboard page

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,9 +19,9 @@ html lang='en'
           #navLinks.collapse.navbar-collapse
             ul.navbar-nav.ml-auto
               li.nav-item.active.navbar-nav__nav-item
-                a.nav-link.white-text href='#' Dashboard
+                a.nav-link.white-text href=root_path Dashboard
               li.nav-item.navbar-nav__nav-item
-                a.nav-link.white-text href='#' Leaderboard
+                a.nav-link.white-text href=leaderboard_path Leaderboard
               li.nav-item.navbar-nav__nav-item.d-lg-none
                 = link_to('Change Password', edit_user_registration_path, class: 'nav-link white-text')
               li.nav-item.navbar-nav__nav-item.d-lg-none
