--- a/app/views/user/leaderboard.html.slim
+++ b/app/views/user/leaderboard.html.slim
@@ -2,18 +2,20 @@
   .row
     .col-md-2
     .col-md-8
-      table.table
-        thead.thead-dark
-          tr
-            th scope='col' #
-            th scope='col' Name
-            th scope='col' Matches
-            th scope='col' Points
-        tbody
-          - @leaderboard.each.with_index(1) do |(user_id, (matches, points)), index|
+      - @leaderboards.each do |group_id, leaderboard|
+        | Leaderboard for group: #{@groups.find(group_id).name}
+        table.table
+          thead.thead-dark
             tr
-              th scope='row' #{index}
-              th #{@users.find(user_id).nick_name}
-              th #{matches}
-              th #{points}
+              th scope='col' #
+              th scope='col' Name
+              th scope='col' Matches
+              th scope='col' Points
+          tbody
+            - leaderboard.each.with_index(1) do |(user_id, (matches, points)), index|
+              tr
+                th scope='row' #{index}
+                th #{User.find(user_id).nick_name}
+                th #{matches}
+                th #{points}
     .col-md-2
