--- a/app/views/user/leaderboard.html.slim
+++ b/app/views/user/leaderboard.html.slim
@@ -1,27 +1,24 @@
-#leaderboard.container.mt-3
+.container.mt-3
   .row
     .col-md-2
-    .col-md-8
-      ul.nav.nav-tabs.justify-content-center.match-list__tabs role='tablist' id='leaderboardTabs'
-        - @groups.each_with_index do |group, index|
-          li.nav-item
-            a.nav-link.font-weight-bold id="group#{group.id}-tab" data-toggle="tab" href="#group#{group.id}" role="tab" class=(index == 0 ? 'active' : '') #{group.name}
-
-      .tab-content id='leaderboardTabsContent'
-        - @leaderboards.each_with_index do |(group_id, leaderboard), index|
-          .tab-pane.fade id="group#{group_id}" role="tabpanel" class=(index == 0 ? 'show active' : '')
-            table.table
-              thead.thead-dark
-                tr
-                  th scope='col' #
-                  th scope='col' Name
-                  th scope='col' Matches
-                  th scope='col' Points
-              tbody
-                - leaderboard.each.with_index(1) do |(user_id, (matches, points)), index|
+    .col-md-8#leaderboard
+      - @groups.each_with_index do |group, index|
+        .card.leaderboard__card
+          .card-header.d-flex.justify-content-center.leaderboard__card-header id="group#{group.id}-header" data-toggle="collapse" data-target="#group#{group.id}-table" aria-expanded="true" aria-controls="group#{group.id}-table"
+            .my-auto
+              | #{group.name}
+          .collapse id="group#{group.id}-table" aria-labelledby="group#{group.id}-table" data-parent="#leaderboard" class="#{index.zero? ? 'show' : ''}"
+            .card-body.leaderboard__card-body
+              table.table.table-striped.leaderboard__table
+                thead.leaderboard-table__header
                   tr
-                    th scope='row' #{index}
-                    th #{User.find(user_id).nick_name}
-                    th #{matches}
-                    th #{points}
+                    th scope='col' #
+                    th scope='col' Name
+                    th scope='col' Points
+                tbody
+                  - @leaderboards[group.id].each.with_index(1) do |(user_id, (matches, points)), index|
+                    tr
+                      th scope='row' #{index}
+                      th #{User.find(user_id).nick_name}
+                      th class="#{points.negative? ? 'red-text' : 'green-text'}" #{points.positive? ? '+' : ''}#{points}
     .col-md-2
