--- a/app/views/user/leaderboard.html.slim
+++ b/app/views/user/leaderboard.html.slim
@@ -16,7 +16,7 @@
                     th scope='col' Name
                     th scope='col' Points
                 tbody
-                  - @leaderboards[group.id].each.with_index(1) do |(user_id, (matches, points)), index|
+                  - @leaderboards[group.id].each.with_index(1) do |(user_id, points), index|
                     tr
                       th scope='row' #{index}
                       th #{User.find(user_id).nick_name}
