Add a global leaderboard too

--- a/app/views/user/leaderboard.html.slim
+++ b/app/views/user/leaderboard.html.slim
@@ -21,4 +21,23 @@
                       th scope='row' #{index}
                       th #{User.find(user_id).nick_name}
                       th class="#{points.negative? ? 'red-text' : 'green-text'}" #{points.positive? ? '+' : ''}#{'%g' % points.round(1)}
+      / Also the Global ranking
+      .card.leaderboard__card
+        .card-header.d-flex.justify-content-center.leaderboard__card-header id="groupglobal-header" data-toggle="collapse" data-target="#groupglobal-table" aria-expanded="true" aria-controls="groupglobal-table"
+          .my-auto
+            | Global Ranking
+        .collapse id="groupglobal-table" aria-labelledby="groupglobal-table" data-parent="#leaderboard"
+          .card-body.leaderboard__card-body
+            table.table.table-striped.leaderboard__table
+              thead.leaderboard-table__header
+                tr
+                  th scope='col' #
+                  th scope='col' Name
+                  th scope='col' Points
+              tbody
+                - @global_leaderboard.each.with_index(1) do |(user_id, points), index|
+                  tr
+                    th scope='row' #{index}
+                    th #{User.find(user_id).nick_name}
+                    th class="#{points.negative? ? 'red-text' : 'green-text'}" #{points.positive? ? '+' : ''}#{'%g' % points.round(1)}
     .col-md-2
