Create a rules page

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,6 +22,8 @@ html lang='en'
                 a.nav-link.white-text href=root_path Dashboard
               li.nav-item.navbar-nav__nav-item
                 a.nav-link.white-text href=leaderboard_path Leaderboard
+              li.nav-item.navbar-nav__nav-item
+                a.nav-link.white-text href=rules_path Rules
               li.nav-item.navbar-nav__nav-item.d-lg-none
                 = link_to('Change Password', edit_user_registration_path, class: 'nav-link white-text')
               li.nav-item.navbar-nav__nav-item.d-lg-none
