--- a/app/views/user/_locked_matches_data.html.slim
+++ b/app/views/user/_locked_matches_data.html.slim
@@ -14,6 +14,7 @@ ul.nav.nav-tabs.justify-content-center.match-list__tabs role='tablist' id='predi
               th Prediction
           tbody.text-center
             - predictions[match.id].each do |prediction|
-              tr
-                td #{User.find(prediction[:user_id]).nick_name}
+              - user = User.find(prediction[:user_id])
+              tr class="#{user == current_user ? 'current-user-row' : ''}"
+                td #{user.nick_name}
                 td #{prediction[:prediction]}
