--- a/app/assets/stylesheets/devise/registration.scss
+++ b/app/assets/stylesheets/devise/registration.scss
@@ -6,8 +6,10 @@
   margin: auto;
   border-radius: 0;
   border: 0;
-  min-width: 450px;
-  min-height: 600px;
+  min-width: 320px;
+  @include media-breakpoint-up(md) {
+    min-width: 450px;
+  }
 }
 
 .update-form__header {
