Link brand icon in nav bar to dashboard

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,7 +12,7 @@ html lang='en'
     header.header-bg
       .container
         nav.navbar.navbar-expand-lg.navbar-light.rounded-bottom
-          a.navbar-brand href='#'
+          a.navbar-brand href=root_path
             = image_tag 'wc_logo.jpg', class: 'navbar-logo'
           button.navbar-toggler type="button" data-toggle="collapse" data-target="#navLinks" aria-controls="navLinks" aria-expanded="false" aria-label="Toggle navigation"
             span.navbar-toggler-icon
